--- a/assets/pug/pages/template/cart.pug
+++ b/assets/pug/pages/template/cart.pug
@@ -35,11 +35,11 @@ html(lang='en')
         // Page Body Start
         div.page-body
           div.grid.grid-cols-12.gap-card-gap
-            div.col-span-9(class="xl:col-span-8 lg:col-span-12")
+            div.col-span-9(class="2xl:col-span-8 lg:col-span-12")
               div.card
                 div.overflow-auto.custom-scroll   
                   include ../../components/table/cart-table 
-            div.col-span-3(class="xl:col-span-4 lg:col-span-12")
+            div.col-span-3(class="2xl:col-span-4 lg:col-span-12")
               div.card.sticky.top-0 
                 div.card-header(class="border-b border-border-light dark:border-sidebar-dark2")
                   h3(class="mb-2 font-bold text-title") Cart Information 
