--- a/assets/pug/pages/template/email.pug
+++ b/assets/pug/pages/template/email.pug
@@ -41,10 +41,10 @@ html(lang='en')
         // Page Body Start
         div.page-body
           div.grid.grid-cols-12.email-main(class="lg:gap-0 gap-card-gap")
-            div.col-span-3(class="xl:col-span-4") 
+            div.col-span-3(class="2xl:col-span-4") 
               include ../../layout/email-left-sidebar
 
-            div.col-span-9(class="xl:col-span-8 lg:col-span-12 email-main-sec")
+            div.col-span-9(class="2xl:col-span-8 lg:col-span-12 email-main-sec")
               // Email Start
               div.card.email-input-aside(class="emailList")
                 div(class="flex items-center justify-between pb-3 pl-2 border-b 2xl:p-card-spacing border-border-light dark:border-b dark:border-border-dark 2sm:flex-col-reverse 2sm:gap-4 2sm:items-start ")
