--- a/assets/pug/pages/template/todo.pug
+++ b/assets/pug/pages/template/todo.pug
@@ -47,11 +47,11 @@ html(lang='en')
         // Page Body Start 
         div.page-body 
           div.grid.grid-cols-12(class="lg:gap-0 gap-card-gap")
-            div.col-span-3(class="xl:col-span-4") 
+            div.col-span-3(class="2xl:col-span-4") 
               div(class="card gap-0 lg:z-10 2xl:p-card-spacing lg:p-3 left-sidebar-aside z-[3] lg:w-[280px] sticky min-lg:top-0 sm:w-[269px] lg:fixed lg:h-[100vh]")
                 +todo-left-sidebar(TODO_SIDEBAR_DATA) 
 
-            div.col-span-9(class="xl:col-span-8 lg:col-span-12")
+            div.col-span-9(class="2xl:col-span-8 lg:col-span-12")
               div.flex.flex-col.gap-2.card(class="h-[548px] custom-scroll overflow-auto") 
                 div.flex.justify-between.items-center
                   h5.text-title.font-bold.mb-2 Todo List
