--- a/assets/pug/pages/template/user-profile.pug
+++ b/assets/pug/pages/template/user-profile.pug
@@ -62,7 +62,7 @@ html(lang='en')
                     div 
                       p.text-content-white(class="text-xs font-semibold") Emayila Sidorshina
                       p.text-content-white(class="text-xs font-semibold") Freelancer
-                    div.flex.flex-wrap.items-center.gap-2.post-media
+                    div.flex.flex-wrap.items-center.gap-2
                       a(href="edit-profile.html" class="dark:stroke-white dark:bg-sidebar-dark2").btn.bg-content.text-white.text-xs.py-1 Edit Profile
                       div.dropdown
                         button(class="dark:bg-sidebar-dark2").btn.bg-content.text-white.text-xs.py-1 Share Profile
@@ -385,10 +385,10 @@ html(lang='en')
                             a(href="javascript:void(0)" class="flex items-center gap-1 text-xs text-content3")
                               i(data-feather="heart" class="w-5 h-5 stroke-content3 wish-like") 
                               span(class="leading-[18px] 3sm:hidden") Likes
-                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2")
+                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r")
                               i(data-feather="message-circle" class="w-5 h-5 stroke-content3") 
                               span(class="leading-[18px] 3sm:hidden") Comments
-                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2")
+                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r")
                               i(data-feather="corner-up-right" class="w-5 h-5 stroke-content3") 
                               span(class="leading-[18px] 3sm:hidden") Share
                         div.flex.items-center.gap-1
@@ -400,7 +400,7 @@ html(lang='en')
                               div.w-8.h-8
                                 img(src='../../assets/images/user-app/21.png' alt='avatar')
                             div.avatar.placeholder.bg-gray-light.border-white(class='border-[0.125rem] dark:bg-sidebar-dark2 dark:border-border-dark hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 cursor-pointer')
-                              div.w-8.h-8
+                              div.w-8
                                 span(class="dark:text-content3").text-xs.font-bold.text-title 26+ 
                           p.text-content3.text-xs Liked  
                             span(class="3sm:hidden") by birdie_hoeger
@@ -422,10 +422,10 @@ html(lang='en')
                             a(href="javascript:void(0)" class="flex items-center gap-1 text-xs text-content3")
                               i(data-feather="heart" class="w-5 h-5 stroke-content3 wish-like") 
                               span(class="leading-[18px] 3sm:hidden") Likes
-                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2")
+                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r")
                               i(data-feather="message-circle" class="w-5 h-5 stroke-content3") 
                               span(class="leading-[18px] 3sm:hidden") Comments 
-                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2")
+                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r")
                               i(data-feather="corner-up-right" class="w-5 h-5 stroke-content3") 
                               span(class="leading-[18px] 3sm:hidden") Share
                         div.flex.items-center.gap-1
@@ -437,7 +437,7 @@ html(lang='en')
                               div.w-8.h-8
                                 img(src='../../assets/images/user-app/18.png' alt='avatar')
                             div.avatar.placeholder.bg-gray-light.border-white(class='border-[0.125rem] dark:bg-sidebar-dark2 dark:border-border-dark hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 cursor-pointer')
-                              div.w-8.h-8
+                              div.w-8
                                 span(class="dark:text-content3").text-xs.font-bold.text-title 5+ 
                           p.text-content3.text-xs Liked  
                             span(class="3sm:hidden") by birdie_hoeger  
@@ -459,10 +459,10 @@ html(lang='en')
                             a(href="javascript:void(0)" class="flex items-center gap-1 text-xs text-content3")
                               i(data-feather="heart" class="w-5 h-5 stroke-content3 wish-like") 
                               span(class="leading-[18px] 3sm:hidden") Likes
-                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2")
+                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r")
                               i(data-feather="message-circle" class="w-5 h-5 stroke-content3") 
                               span(class="leading-[18px] 3sm:hidden") Comments 
-                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2")
+                            a(href="javascript:void(0)" class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r")
                               i(data-feather="corner-up-right" class="w-5 h-5 stroke-content3") 
                               span(class="leading-[18px] 3sm:hidden") Share
                         div.flex.items-center.gap-1
@@ -474,7 +474,7 @@ html(lang='en')
                               div.w-8.h-8
                                 img(src='../../assets/images/user-app/14.png' alt='avatar')
                             div.avatar.placeholder.bg-gray-light.border-white(class='border-[0.125rem] dark:bg-sidebar-dark2 dark:border-border-dark hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 cursor-pointer')
-                              div.w-8.h-8
+                              div.w-8
                                 span(class="dark:text-content3").text-xs.font-bold.text-title 15+ 
                           p.text-content3.text-xs Liked  
                             span(class="3sm:hidden") by birdie_hoeger  
@@ -487,7 +487,7 @@ html(lang='en')
       div.modal-main
         input#suggest-modal(class="peer" name="suggest-modal" type='checkbox')
         label.modal-overlay(class="peer-checked:block" for='suggest-modal')
-        div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2")
+        div.modal.modal-center(class="w-full max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2")
           div.modal-body
             form.flex.flex-col.gap-4(class="!m-0")
               div.modal-img
@@ -534,14 +534,14 @@ html(lang='en')
                       span.text-content3(class="font-semibold text-2xs") Web Developer
                   a(href="javascript:void(0)" class="dark:bg-sidebar-dark2").btn.btn-primary.btn-outline.p-1.group.suggest-btn
                     +SVG_ICON("Profile", "w-4 h-4 stroke-primary group-hover:stroke-white") 
-              div(class="justify-end flex items-center gap-3")
+              div(class="flex items-center justify-end gap-3")
                 label(for="suggest-modal" class="dark:bg-sidebar-dark2 dark:text-white").btn.bg-gray-light.p-2.text-title Save                                
                 label(for="suggest-modal" class="dark:text-white").btn.bg-success.p-2.text-white Cancel
       //- Add friends modal
       div.modal-main
         input#add-friend-modal(class="peer" name="add-friend-modal" type='checkbox')
         label.modal-overlay(class="peer-checked:block" for='add-friend-modal')
-        div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2")
+        div.modal.modal-center(class="w-full max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2")
           div.modal-body
             form.flex.flex-col.gap-4(class="!m-0")
               div.modal-img
@@ -584,14 +584,14 @@ html(lang='en')
                       p.text-title(class="text-xs font-semibold dark:text-white") Tiana Baumbach
                       span.text-content3(class="font-semibold text-2xs") Web Designer
                   a(href="javascript:void(0)" class="dark:bg-sidebar-dark2 dark:text-white").add-btn.btn.bg-gray-light.p-2  Add
-              div(class="justify-end flex items-center gap-3")
+              div(class="flex items-center justify-end gap-3")
                 label(for="add-friend-modal" class="dark:bg-sidebar-dark2 dark:text-white").btn.bg-gray-light.p-2.text-title Save                                
                 label(for="add-friend-modal").btn.bg-secondary.p-2.text-white Cancel                               
       //- Follow modal
       div.modal-main 
         input#follow-modal(class="peer" name="follow-modal" type='checkbox')
         label.modal-overlay(class="peer-checked:block" for='follow-modal')
-        div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2")
+        div.modal.modal-center(class="w-full max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2")
           div.modal-body
             form.flex.flex-col.gap-4(class="!m-0")
               div.modal-img
@@ -634,7 +634,7 @@ html(lang='en')
                       p.text-title(class="text-xs font-semibold dark:text-white") Abdul Volkman
                       span.text-content3(class="font-semibold text-2xs") Web Developer
                   a(href="javascript:void(0)" class="dark:bg-sidebar-dark2 dark:text-white").follow-btn.btn.bg-gray-light.p-2  Follow                     
-              div(class="justify-end flex items-center gap-3")
+              div(class="flex items-center justify-end gap-3")
                 label(for="follow-modal" class="dark:bg-sidebar-dark2 dark:text-white").btn.bg-gray-light.p-2.text-title Save                                
                 label(for="follow-modal").btn.bg-dark.p-2.text-white Cancel
 
