--- a/html/template/add-product.html
+++ b/html/template/add-product.html
@@ -1027,7 +1027,7 @@
             <div class="col-span-8 pr-4 border-r dark:border-r rtl:!border-r-0 rtl:!pr-4 dark:border-border-dark 2lg:col-span-12 2lg:border-b 2lg:pb-4 2lg:border-r-0 border-border-light rtl:border-l rtl:2lg:border-l-0  rtl:pl-4 ">
               <div> 
                 <h5 class="text-title font-semibold mb-3">Create Product </h5>
-                <form class="flex flex-col gap-4 m-0 theme-form">
+                <form class="flex flex-col gap-4 m-0 sm:gap-3 theme-form">
                   <div> 
                     <label for="productName">Product Name</label>
                     <input type="text" id="productName" value="Women's Latest Bags" required>
@@ -1036,7 +1036,7 @@
                     <label for="description">Product Description </label>
                     <textarea class="p-[11px] dark:border-border-dark focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="A bag that holds your entire universe!"></textarea>
                   </div>
-                  <div class="grid grid-cols-12 gap-5">
+                  <div class="grid grid-cols-12 gap-5 sm:gap-3 sm:-mt-1">
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="sku">SKU </label>
                       <input type="text" id="sku" value="Women's Latest Bags" required>
@@ -1054,7 +1054,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="grid grid-cols-12 gap-5">
+                  <div class="grid grid-cols-12 gap-5 sm:gap-3">
                     <div class="col-span-4 2md:col-span-6 sm:col-span-12">
                       <label for="gender">Gender</label>
                       <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2 " id="gender" aria-label="Default select example">
@@ -1074,7 +1074,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="grid grid-cols-12 gap-5"> 
+                  <div class="grid grid-cols-12 gap-5 sm:gap-3"> 
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="tax">Tax</label>
                       <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2" id="tax" aria-label="Default select example">
@@ -1101,7 +1101,7 @@
             <div class="col-span-4 2lg:col-span-12">
               <div class="dark:border-b dark:border-border-dark border-b border-border-light pb-3">
                 <h5 class="text-title font-semibold mb-3">Publish</h5>
-                <form class="flex flex-col gap-4 m-0 theme-form">
+                <form class="flex flex-col gap-4 m-0 sm:gap-3 theme-form">
                   <div> 
                     <label for="publishStatus">Status</label>
                     <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark  dark:bg-sidebar-dark2" id="publishStatus" aria-label="Default select example">
@@ -1143,7 +1143,7 @@
               </div>
               <div class="pt-3">
                 <h5 class="text-title font-semibold mb-3">General Info</h5>
-                <form class="flex flex-col gap-4 m-0 theme-form">
+                <form class="flex flex-col gap-4 m-0 sm:gap-3 theme-form">
                   <div> 
                     <label for="manufactureName">Manufacturer Name</label>
                     <input type="text" id="manufactureName" placeholder="Enter manufacture name.." required>
