--- a/html/template/cart.html
+++ b/html/template/cart.html
@@ -1019,7 +1019,7 @@
         <!-- Page Body Start-->
         <div class="page-body">
           <div class="grid grid-cols-12 gap-card-gap">
-            <div class="col-span-9 xl:col-span-8 lg:col-span-12">
+            <div class="col-span-9 2xl:col-span-8 lg:col-span-12">
               <div class="card">
                 <div class="overflow-auto custom-scroll">  
                   <table class="table equal-space table-action shopping-bag cart-main">
@@ -1041,12 +1041,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$251</span>
                             <del class="font-bold text-2xs text-content ">$599</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">22%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="2" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1054,7 +1054,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$502</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1082,12 +1082,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$433</span>
                             <del class="font-bold text-2xs text-content ">$789</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">45%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="3" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1095,7 +1095,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$1301</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1123,12 +1123,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$659</span>
                             <del class="font-bold text-2xs text-content ">$999</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">34%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="7" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1136,7 +1136,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$4615</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1164,12 +1164,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$251</span>
                             <del class="font-bold text-2xs text-content ">$699</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">64%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="4" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1177,7 +1177,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$1006</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1205,12 +1205,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$254</span>
                             <del class="font-bold text-2xs text-content ">$499</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">49%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="6" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1218,7 +1218,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$1526</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1246,12 +1246,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$422</span>
                             <del class="font-bold text-2xs text-content ">$768</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">45%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="2" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1259,7 +1259,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$844</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1287,12 +1287,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$224</span>
                             <del class="font-bold text-2xs text-content ">$899</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">75%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="3" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1300,7 +1300,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$674</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1328,12 +1328,12 @@
                             </div>
                           </div>
                         </td>
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[145px]">
                           <div class="flex gap-1 items-center"> <span class="text-lg font-bold text-title">$768</span>
                             <del class="font-bold text-2xs text-content ">$1200</del>
                           </div><span class="text-[0.813rem] font-medium text-secondary">36%OFF</span>
                         </td>
-                        <td class="min-w-[100px]"> 
+                        <td class="min-w-[90px]"> 
                           <div class="plus-minus flex items-center text-center bg-primary-light border border-primary rounded-5"><i class="sub cursor-pointer w-5 h-5 bg-primary border-r border-primary stroke-white p-[3px]" data-feather="minus"></i>
                             <input class="text-center bg-transparent text-title" type="number" value="2" min="1" max="10"/><i class="add cursor-pointer w-5 h-5 bg-primary border-l border-primary stroke-white p-[3px]" data-feather="plus"></i>
                           </div>
@@ -1341,7 +1341,7 @@
                         <td class="min-w-[100px] 2md:min-w-[65px]"> 
                           <h4 class="text-xs font-semibold text-title">$1536</h4>
                         </td>
-                        <td class="min-w-[100px] 2md:min-w-max">
+                        <td class="min-w-[70px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end 2md:hidden"> 
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Delete"> </use>
@@ -1366,7 +1366,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-12">
+            <div class="col-span-3 2xl:col-span-4 lg:col-span-12">
               <div class="card sticky top-0"> 
                 <div class="card-header border-b border-border-light dark:border-sidebar-dark2">
                   <h3 class="mb-2 font-bold text-title">Cart Information </h3>
