--- a/html/template/email.html
+++ b/html/template/email.html
@@ -1020,7 +1020,7 @@
         <!-- Page Body Start-->
         <div class="page-body">
           <div class="grid grid-cols-12 email-main lg:gap-0 gap-card-gap">
-            <div class="col-span-3 xl:col-span-4"> 
+            <div class="col-span-3 2xl:col-span-4"> 
               <!-- email left sidebar Start -->
               <div class="card gap-0 lg:z-10 2xl:p-card-spacing lg:p-3 left-sidebar-aside z-[3] lg:w-[280px] sticky min-lg:top-0 sm:w-[269px] lg:fixed lg:h-[100vh]">
                 <div class="flex justify-between">
@@ -1107,7 +1107,7 @@
               </div>
               <!-- email left sidebar Start -->
             </div>
-            <div class="col-span-9 xl:col-span-8 lg:col-span-12 email-main-sec">
+            <div class="col-span-9 2xl:col-span-8 lg:col-span-12 email-main-sec">
               <!-- Email Start-->
               <div class="card email-input-aside emailList">
                 <div class="flex items-center justify-between pb-3 pl-2 border-b 2xl:p-card-spacing border-border-light dark:border-b dark:border-border-dark 2sm:flex-col-reverse 2sm:gap-4 2sm:items-start ">
@@ -1171,7 +1171,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/2.jpg" alt="Mint - is your budget ready for spring spending?"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Mint - is your budget ready for spring spending?</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">A quick weekend trip, a staycation in your own town, or a weeklong vacay with the family—it’s your choice . . . if it’s in the budget. No matter what you plan on doing during spring break, budget ahead for it.</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Mint - is your budget ready for spring spending?</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">A quick weekend trip, a staycation in your own town, or a weeklong vacay with the family—it’s your choice . . . if it’s in the budget. No matter what you plan on doing during spring break, budget ahead for it.</span>
                           </div>
                         </div>
                       </div>
@@ -1194,7 +1194,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/3.jpg" alt="Google - You Changed Your Password"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Google - You Changed Your Password</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">You have a new password, just wanted to let you know. If you requested this modification, you may safely disregard this email. If not, just let us know and we would be happy to assist.</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Google - You Changed Your Password</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">You have a new password, just wanted to let you know. If you requested this modification, you may safely disregard this email. If not, just let us know and we would be happy to assist.</span>
                           </div>
                         </div>
                       </div>
@@ -1217,7 +1217,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/4.jpg" alt="Flipkart - Confirmed order"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Flipkart - Confirmed order</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">Your Order #224820998666029 has been Confirmed</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Flipkart - Confirmed order</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">Your Order #224820998666029 has been Confirmed</span>
                           </div>
                         </div>
                       </div>
@@ -1240,7 +1240,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/5.jpg" alt="Welcome to CodePen"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Welcome to CodePen</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">Thanks for signing up for CodePen! We're happy you're here. Let's get your email address verified:</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Welcome to CodePen</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">Thanks for signing up for CodePen! We're happy you're here. Let's get your email address verified:</span>
                           </div>
                         </div>
                       </div>
@@ -1263,7 +1263,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/6.jpg" alt="Re: New mail settings"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Re: New mail settings</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">Hello, Everyone understands why a new language would be advantageous: one could refuse to pay for high-priced translators.</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Re: New mail settings</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">Hello, Everyone understands why a new language would be advantageous: one could refuse to pay for high-priced translators.</span>
                           </div>
                         </div>
                       </div>
@@ -1286,7 +1286,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/7.jpg" alt="Google Community Team"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Google Community Team</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">Welcome to Google. Your new account comes with access to Google products, apps and services.Here are a few tips to get you started.</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Google Community Team</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">Welcome to Google. Your new account comes with access to Google products, apps and services.Here are a few tips to get you started.</span>
                           </div>
                         </div>
                       </div>
@@ -1309,7 +1309,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/8.jpg" alt="Figma - Move work forward"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Figma - Move work forward</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">Moving work forward can be hard. How do you take an idea from good to great? From concept to reality?</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Figma - Move work forward</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">Moving work forward can be hard. How do you take an idea from good to great? From concept to reality?</span>
                           </div>
                         </div>
                       </div>
@@ -1332,7 +1332,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/9.jpg" alt="Trip Reminder."/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Trip Reminder.</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">I'm sorry, but I have to disagree with Mr. Zingier. We are all aware that the title is the most crucial component of any article. Your reader won't even make it to the first sentence without an engaging title.</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">Trip Reminder.</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">I'm sorry, but I have to disagree with Mr. Zingier. We are all aware that the title is the most crucial component of any article. Your reader won't even make it to the first sentence without an engaging title.</span>
                           </div>
                         </div>
                       </div>
@@ -1355,7 +1355,7 @@
                             <div class="rounded-full h-10 w-10"><img src="../../assets/images/avatar/10.jpg" alt="There was a request to change your password!"/></div>
                           </div>
                           <div class="w-[calc(100%_-_40px)]">
-                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">There was a request to change your password!</h4><span class="text-content truncate block mt-1 whitespace-normal line-clamp-1">You were asked to alter your password! Simply ignore this email if you did not request it. If not, kindly click the following button to modify your password:</span>
+                            <h4 class="text-xs font-medium truncate text-title leading-none whitespace-normal lg:text-2xs line-clamp-1">There was a request to change your password!</h4><span class="text-content block mt-1 whitespace-normal md:line-clamp-2 sm:line-clamp-1">You were asked to alter your password! Simply ignore this email if you did not request it. If not, kindly click the following button to modify your password:</span>
                           </div>
                         </div>
                       </div>
