--- a/html/template/monochrome-mode.html
+++ b/html/template/monochrome-mode.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1017,14 +1017,14 @@
             </nav>
           </aside>
         </div>
-        <!-- Sidebar End-->
+        <!-- Sidebar End -->
         <!-- Page Body Start-->
-        <div class="page-body">
+        <div class="page-body"> 
           <div class="grid grid-cols-12 gap-card-gap">
             <div class="col-span-8 xl:col-span-12"> 
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1054,7 +1054,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1084,7 +1084,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1114,7 +1114,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1146,8 +1146,8 @@
               </div>
             </div>
             <div class="col-span-4 xl:col-span-6 xl3:col-span-12">
-              <div class="card gap-0">
-                <div class="card-header">
+              <div class="card gap-0"> 
+                <div class="card-header"> 
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Recent Statistics</h3>
                     <div class="custom-select select-style-1"> 
@@ -1160,18 +1160,18 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <div class="relative"> 
-                    <div id="recentStatisticsChart1">          </div>
+                  <div class="relative">
+                    <div id="recentStatisticsChart1">  </div>
                     <div class="absolute inset-0" id="recentStatisticsChart2"></div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-span-4 xl:col-span-6 lg:col-span-12 xl3:order-5">
-              <div class="grid grid-cols-2 gap-card-gap"> 
+              <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card">
-                    <div class="card-header">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                    <div class="card-header"> 
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Earnings</h3>
                         <div class="dropdown on-hover-show">
@@ -1206,7 +1206,7 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-body">
                       <div> 
                         <div class="flex items-center justify-between">
@@ -1239,7 +1239,7 @@
             <div class="col-span-4 xl:col-span-6 lg:col-span-12">
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2"> 
-                  <div class="card">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Inventory Cost</h3>
@@ -1259,7 +1259,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="card-body"> 
+                    <div class="card-body">
                       <ul> 
                         <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group dark:bg-sidebar-dark2"><a class="flex items-center justify-between" href="javascript:void(0)">
                             <div class="flex items-center gap-2"> <img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/1.jpg" alt="Inventory Cost"/>
@@ -1280,11 +1280,11 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card p-0 overflow-hidden">
-                    <div class="relative"><img class="w-full h-[178px] 2xl:h-[170px] lg:h-[193px] 2md:h-[170px]" src="../../assets/images/banner/2.jpg" alt="banner">
-                      <div class="absolute top-1/2 -translate-y-1/2 left-0 max-w-[70%] px-card-space ">  
+                  <div class="card p-0 overflow-hidden transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45 ">
+                    <div class="relative"><img class="w-full h-[185px] 4xl:h-[180px] 2xl:h-[170px] lg:h-[193px] 2md:h-[170px] dark:brightness-50" src="../../assets/images/banner/2.jpg" alt="banner">
+                      <div class="absolute top-1/2 -translate-y-1/2 left-0 max-w-[70%] px-card-space"> 
                         <h5 class="text-lg font-extrabold text-title">$5,859 </h5>
-                        <p class="text-lg font-normal 4xl:text-sm text-title">Make an announcement to your coworkers</p>
+                        <p class="text-lg font-normal 4xl:text-sm text-title ">Make an announcement to your coworkers</p>
                       </div>
                     </div>
                   </div>
@@ -1292,9 +1292,9 @@
               </div>
             </div>
             <div class="col-span-4 xl:col-span-6 lg:col-span-12">
-              <div class="grid grid-cols-2 gap-card-gap">
+              <div class="grid grid-cols-2 gap-card-gap"> 
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Advertising</h3>
@@ -1335,14 +1335,14 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card !gap-1 lg:!gap-6"> 
-                    <div class="card-header">
+                  <div class="card !gap-1 lg:!gap-6 transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45"> 
+                    <div class="card-header"> 
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
-                        <h3 class="text-lg font-bold text-title leading-none">Most Location Visits</h3>
+                        <h3 class="text-lg font-bold text-title leading-none">Most Location Visits </h3>
                       </div>
                     </div>
                     <div class="card-body">
-                      <div class="flex items-center h-full"> 
+                      <div class="flex items-center h-full">
                         <ul class="flex flex-col gap-[15px] w-full sm:flex-col"> 
                           <li class="flex items-center relative gap-[21px] md:gap-[8px] 2lg:gap-[14px] py-[7px] 3xl:py-[5px] px-[14px] 3xl:px-[11px] 2md:px-[6px]">
                             <div class="absolute inset-0 bg-success opacity-20"></div>
@@ -1369,7 +1369,7 @@
             </div>
             <div class="col-span-8 xl3:order-last 3xl:col-span-8 xl3:col-span-12">
               <div class="card overflow-hidden">
-                <div class="card-header">
+                <div class="card-header"> 
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Social Media Statistics</h3>
                     <div class="custom-select select-style-1"> 
@@ -1381,7 +1381,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body"> 
+                <div class="card-body">
                   <div class="-mx-[60px] md:-mx-[45px] sm:-mx-[35px] 2sm:-mx-[34px]" id="socialAreaChart">     </div>
                 </div>
               </div>
@@ -1409,26 +1409,17 @@
                 </div>
                 <div class="card-body">
                   <div class="-mx-card-space" id="market-overview-chart"></div>
-                  <ul class="flex items-center justify-between 2md:max-w-[60%] 3sm:max-w-full sm:max-w-[90%] 2md:mx-auto">
+                  <ul class="flex items-center justify-between 2md:max-w-[60%] 3sm:max-w-full sm:max-w-[90%]   2md:mx-auto">
                     <li class="px-[5px]">
-                      <div class="w-[46px] mx-auto text-center"> 
-                        <div class="sales-small sales-small-1 h-[45px]"></div>
-                      </div>
-                      <div class="flex items-center justify-center flex-col"> <span class="text-sm font-semibold text-title">300     </span><span class="font-semibold text-3xs text-content">Watch Sale     </span></div>
+                      <div class="flex items-center justify-center flex-col"> <span class="text-sm font-semibold text-title">300     </span><span class="font-semibold text-3xs text-content">Watch Sale </span></div>
                     </li>
                     <li class="w-[1px] h-[30px] bg-border-light"> </li>
                     <li class="px-[5px]">
-                      <div class="w-[46px] mx-auto text-center"> 
-                        <div class="sales-small sales-small-2 h-[45px]"></div>
-                      </div>
-                      <div class="flex items-center justify-center flex-col"> <span class="text-sm font-semibold text-title">1120   </span><span class="font-semibold text-3xs text-content">Phone Sale    </span></div>
+                      <div class="flex items-center justify-center flex-col"> <span class="text-sm font-semibold text-title">1120   </span><span class="font-semibold text-3xs text-content">Phone Sale </span></div>
                     </li>
-                    <li class="w-[1px] h-[30px] bg-border-light"> </li>
+                    <li class="w-[1px] h-[30px] bg-border-light "></li>
                     <li class="px-[5px]">
-                      <div class="w-[46px] mx-auto text-center"> 
-                        <div class="sales-small sales-small-3 h-[45px]"> </div>
-                      </div>
-                      <div class="flex items-center justify-center flex-col"> <span class="text-sm font-semibold text-title">530    </span><span class="font-semibold text-3xs text-content">Tablet Sale </span></div>
+                      <div class="flex items-center justify-center flex-col"> <span class="text-sm font-semibold text-title">530 </span><span class="font-semibold text-3xs text-content">Tablet Sale </span></div>
                     </li>
                   </ul>
                 </div>
