--- a/html/template/user-card.html
+++ b/html/template/user-card.html
@@ -1056,7 +1056,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">500</span></div>
                   </div>
@@ -1083,7 +1083,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">245k</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">245k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">675k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">480</span></div>
                   </div>
@@ -1110,7 +1110,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">150k</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">150k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">425k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">350</span></div>
                   </div>
@@ -1137,7 +1137,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">500</span></div>
                   </div>
@@ -1164,7 +1164,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">500</span></div>
                   </div>
@@ -1191,7 +1191,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">200k</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">200k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">958k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">1000</span></div>
                   </div>
@@ -1218,7 +1218,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">500</span></div>
                   </div>
@@ -1245,7 +1245,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">265k</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">265k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">785k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">420</span></div>
                   </div>
@@ -1272,7 +1272,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">152k</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">152k</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">450k</span></div>
                   </div>
@@ -1299,7 +1299,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">500</span></div>
                   </div>
@@ -1326,7 +1326,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-detail flex flex-wrap justify-center items-center bg-gray-light p-4 2md:p-2 sm:p-4 dark:bg-sidebar-dark dark:border-t dark:border-border-dark">
-                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
+                    <div class="following-data flex flex-col justify-center items-center gap-0 font-semibold pr-padding border-r-2 border-border-light  dark:border-border-dark rtl:!border-r-0 rtl:!border-l-2"><span class="text-xs leading-5">Following </span><span class="text-[13px] leading-[18px] text-content">235K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold px-padding border-r-2 border-border-light dark:border-r-2 dark:border-border-dark rtl:border-l-2 rtl:border-r-0"><span class="text-xs leading-5">Follower</span><span class="text-[13px] leading-[18px] text-content">562K</span></div>
                     <div class="follower-data flex flex-col justify-center items-center gap-0 font-semibold pl-padding"> <span class="text-xs leading-5">Likes</span><span class="text-[13px] leading-[18px] text-content">500</span></div>
                   </div>
