--- a/html/template/user-profile.html
+++ b/html/template/user-profile.html
@@ -1043,7 +1043,7 @@
                       <p class="text-content-white text-xs font-semibold">Emayila Sidorshina</p>
                       <p class="text-content-white text-xs font-semibold">Freelancer</p>
                     </div>
-                    <div class="flex flex-wrap items-center gap-2 post-media"><a class="dark:stroke-white dark:bg-sidebar-dark2 btn bg-content text-white text-xs py-1" href="edit-profile.html">Edit Profile</a>
+                    <div class="flex flex-wrap items-center gap-2"><a class="dark:stroke-white dark:bg-sidebar-dark2 btn bg-content text-white text-xs py-1" href="edit-profile.html">Edit Profile</a>
                       <div class="dropdown">
                         <button class="dark:bg-sidebar-dark2 btn bg-content text-white text-xs py-1">Share Profile</button>
                         <div class="dropdown-menu !w-fit !top-8 left-0 !p-2 2sm:-left-24 rtl:left-0 rtl:right-unset">
@@ -1512,7 +1512,7 @@
                         </div>
                         <div><img class="w-full h-60 sm:h-44" src="../../assets/images/user-app/bg-2.jpg" alt=""></div>
                         <div class="flex items-center gap-1">
-                          <div class="flex flex-wrap items-center gap-2 post-media"> <a class="flex items-center gap-1 text-xs text-content3" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3 wish-like" data-feather="heart"> </i><span class="leading-[18px] 3sm:hidden">Likes</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="message-circle"> </i><span class="leading-[18px] 3sm:hidden">Comments</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="corner-up-right"> </i><span class="leading-[18px] 3sm:hidden">Share</span></a></div>
+                          <div class="flex flex-wrap items-center gap-2 post-media"> <a class="flex items-center gap-1 text-xs text-content3" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3 wish-like" data-feather="heart"> </i><span class="leading-[18px] 3sm:hidden">Likes</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="message-circle"> </i><span class="leading-[18px] 3sm:hidden">Comments</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="corner-up-right"> </i><span class="leading-[18px] 3sm:hidden">Share</span></a></div>
                         </div>
                         <div class="flex items-center gap-1">
                           <div class="avatar-group -space-x-6 justify-center items-center">
@@ -1523,7 +1523,7 @@
                               <div class="w-8 h-8"><img src="../../assets/images/user-app/21.png" alt="avatar"></div>
                             </div>
                             <div class="avatar placeholder bg-gray-light border-white border-[0.125rem] dark:bg-sidebar-dark2 dark:border-border-dark hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 cursor-pointer">
-                              <div class="w-8 h-8"><span class="dark:text-content3 text-xs font-bold text-title">26+ </span></div>
+                              <div class="w-8"><span class="dark:text-content3 text-xs font-bold text-title">26+ </span></div>
                             </div>
                           </div>
                           <p class="text-content3 text-xs">Liked  <span class="3sm:hidden">by birdie_hoeger</span></p>
@@ -1543,7 +1543,7 @@
                         </div>
                         <div><img class="w-full h-60 sm:h-44" src="../../assets/images/user-app/24.jpeg" alt=""></div>
                         <div class="flex items-center gap-1">
-                          <div class="flex flex-wrap items-center gap-2 post-media"> <a class="flex items-center gap-1 text-xs text-content3" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3 wish-like" data-feather="heart"> </i><span class="leading-[18px] 3sm:hidden">Likes</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="message-circle"> </i><span class="leading-[18px] 3sm:hidden">Comments </span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="corner-up-right"> </i><span class="leading-[18px] 3sm:hidden">Share</span></a></div>
+                          <div class="flex flex-wrap items-center gap-2 post-media"> <a class="flex items-center gap-1 text-xs text-content3" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3 wish-like" data-feather="heart"> </i><span class="leading-[18px] 3sm:hidden">Likes</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="message-circle"> </i><span class="leading-[18px] 3sm:hidden">Comments </span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="corner-up-right"> </i><span class="leading-[18px] 3sm:hidden">Share</span></a></div>
                         </div>
                         <div class="flex items-center gap-1">
                           <div class="avatar-group -space-x-6 justify-center items-center">
@@ -1554,7 +1554,7 @@
                               <div class="w-8 h-8"><img src="../../assets/images/user-app/18.png" alt="avatar"></div>
                             </div>
                             <div class="avatar placeholder bg-gray-light border-white border-[0.125rem] dark:bg-sidebar-dark2 dark:border-border-dark hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 cursor-pointer">
-                              <div class="w-8 h-8"><span class="dark:text-content3 text-xs font-bold text-title">5+ </span></div>
+                              <div class="w-8"><span class="dark:text-content3 text-xs font-bold text-title">5+ </span></div>
                             </div>
                           </div>
                           <p class="text-content3 text-xs">Liked  <span class="3sm:hidden">by birdie_hoeger  </span></p>
@@ -1574,7 +1574,7 @@
                         </div>
                         <div><img class="w-full h-60 sm:h-44" src="../../assets/images/user-app/bg-1.jpg" alt=""></div>
                         <div class="flex items-center gap-1">
-                          <div class="flex flex-wrap items-center gap-2 post-media"> <a class="flex items-center gap-1 text-xs text-content3" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3 wish-like" data-feather="heart"> </i><span class="leading-[18px] 3sm:hidden">Likes</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="message-circle"> </i><span class="leading-[18px] 3sm:hidden">Comments </span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r rtl:pl-0 rtl:pr-2" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="corner-up-right"> </i><span class="leading-[18px] 3sm:hidden">Share</span></a></div>
+                          <div class="flex flex-wrap items-center gap-2 post-media"> <a class="flex items-center gap-1 text-xs text-content3" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3 wish-like" data-feather="heart"> </i><span class="leading-[18px] 3sm:hidden">Likes</span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="message-circle"> </i><span class="leading-[18px] 3sm:hidden">Comments </span></a><a class="flex items-center gap-1 pl-2 text-xs border-l text-content3 border-border-light dark:border-sidebar-dark2 rtl:border-l-0 rtl:border-r" href="javascript:void(0)"><i class="w-5 h-5 stroke-content3" data-feather="corner-up-right"> </i><span class="leading-[18px] 3sm:hidden">Share</span></a></div>
                         </div>
                         <div class="flex items-center gap-1">
                           <div class="avatar-group -space-x-6 justify-center items-center">
@@ -1585,7 +1585,7 @@
                               <div class="w-8 h-8"><img src="../../assets/images/user-app/14.png" alt="avatar"></div>
                             </div>
                             <div class="avatar placeholder bg-gray-light border-white border-[0.125rem] dark:bg-sidebar-dark2 dark:border-border-dark hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 cursor-pointer">
-                              <div class="w-8 h-8"><span class="dark:text-content3 text-xs font-bold text-title">15+ </span></div>
+                              <div class="w-8"><span class="dark:text-content3 text-xs font-bold text-title">15+ </span></div>
                             </div>
                           </div>
                           <p class="text-content3 text-xs">Liked  <span class="3sm:hidden">by birdie_hoeger  </span></p>
@@ -1669,7 +1669,7 @@
       <div class="modal-main">
         <input class="peer" id="suggest-modal" name="suggest-modal" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="suggest-modal"></label>
-        <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2">
+        <div class="modal modal-center w-full max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2">
           <div class="modal-body">
             <form class="flex flex-col gap-4 !m-0">
               <div class="modal-img"><img class="w-16 dark:invert-[1]" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
@@ -1726,7 +1726,7 @@
                     </svg></a>
                 </li>
               </ul>
-              <div class="justify-end flex items-center gap-3">
+              <div class="flex items-center justify-end gap-3">
                 <label class="dark:bg-sidebar-dark2 dark:text-white btn bg-gray-light p-2 text-title" for="suggest-modal">Save                                </label>
                 <label class="dark:text-white btn bg-success p-2 text-white" for="suggest-modal">Cancel</label>
               </div>
@@ -1737,7 +1737,7 @@
       <div class="modal-main">
         <input class="peer" id="add-friend-modal" name="add-friend-modal" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="add-friend-modal"></label>
-        <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2">
+        <div class="modal modal-center w-full max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2">
           <div class="modal-body">
             <form class="flex flex-col gap-4 !m-0">
               <div class="modal-img"><img class="w-16 dark:invert-[1]" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
@@ -1782,7 +1782,7 @@
                   </div><a class="dark:bg-sidebar-dark2 dark:text-white add-btn btn bg-gray-light p-2" href="javascript:void(0)"> Add</a>
                 </li>
               </ul>
-              <div class="justify-end flex items-center gap-3">
+              <div class="flex items-center justify-end gap-3">
                 <label class="dark:bg-sidebar-dark2 dark:text-white btn bg-gray-light p-2 text-title" for="add-friend-modal">Save                                </label>
                 <label class="btn bg-secondary p-2 text-white" for="add-friend-modal">Cancel                               </label>
               </div>
@@ -1793,7 +1793,7 @@
       <div class="modal-main"> 
         <input class="peer" id="follow-modal" name="follow-modal" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="follow-modal"></label>
-        <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2">
+        <div class="modal modal-center w-full max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2">
           <div class="modal-body">
             <form class="flex flex-col gap-4 !m-0">
               <div class="modal-img"><img class="w-16 dark:invert-[1]" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
@@ -1838,7 +1838,7 @@
                   </div><a class="dark:bg-sidebar-dark2 dark:text-white follow-btn btn bg-gray-light p-2" href="javascript:void(0)"> Follow                     </a>
                 </li>
               </ul>
-              <div class="justify-end flex items-center gap-3">
+              <div class="flex items-center justify-end gap-3">
                 <label class="dark:bg-sidebar-dark2 dark:text-white btn bg-gray-light p-2 text-title" for="follow-modal">Save                                </label>
                 <label class="btn bg-dark p-2 text-white" for="follow-modal">Cancel</label>
               </div>
