--- a/assets/postcss/pages/_ecommerce.css
+++ b/assets/postcss/pages/_ecommerce.css
@@ -201,7 +201,7 @@
             }
             td {
               &:last-child {
-                @apply text-right;
+                @apply text-end;
               }
             }
           }
