--- a/html/template/todo.html
+++ b/html/template/todo.html
@@ -1019,7 +1019,7 @@
         <!-- Page Body Start -->
         <div class="page-body"> 
           <div class="grid grid-cols-12 lg:gap-0 gap-card-gap">
-            <div class="col-span-3 xl:col-span-4"> 
+            <div class="col-span-3 2xl:col-span-4"> 
               <div class="card gap-0 lg:z-10 2xl:p-card-spacing lg:p-3 left-sidebar-aside z-[3] lg:w-[280px] sticky min-lg:top-0 sm:w-[269px] lg:fixed lg:h-[100vh]">
                 <button class="justify-end hidden mb-3 lg:flex left-sidebar-toggle absolute right-[-35px] top-0 bg-gray-light dark:bg-sidebar-dark2 p-2 ">  <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
                 <label class="button-label btn-primary flex gap-2 items-center justify-center w-full text-sm" for="todo-modal"> <i class="w-[1.125rem] h-[1.125rem] stroke-white" data-feather="plus"></i>New Task</label>
@@ -1084,7 +1084,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-9 xl:col-span-8 lg:col-span-12">
+            <div class="col-span-9 2xl:col-span-8 lg:col-span-12">
               <div class="flex flex-col gap-2 card h-[548px] custom-scroll overflow-auto"> 
                 <div class="flex justify-between items-center">
                   <h5 class="text-title font-bold mb-2">Todo List</h5><i class="hidden w-5 h-5 cursor-pointer stroke-title left-sidebar-toggle-btn lg:block" data-feather="align-left"></i>
